fix bug default values en motoid, precio, entrega

--- a/frontend/ARAN/src/app/ordentrabajo/nueva/nueva.page.html
+++ b/frontend/ARAN/src/app/ordentrabajo/nueva/nueva.page.html
@@ -67,7 +67,7 @@
 
     <!-- MOTOS -->
     <ion-item>
-      <ion-button (click)="openModalMotos()"> Agregar Moto </ion-button>
+      <ion-button (click)="openModalMotos()"> Agregar Moto (*) </ion-button>
     </ion-item>
 
     <ion-list>
