btn limpiar forms

--- a/frontend/ARAN/src/app/ordentrabajo/nueva/nueva.page.html
+++ b/frontend/ARAN/src/app/ordentrabajo/nueva/nueva.page.html
@@ -140,5 +140,9 @@
     <ion-button [disabled]="!formNuevaOT.valid" color="primary" (click)="onSubmit(nolimpiar)">Guardar y Seguir Añadiendo</ion-button>
   </ion-item>
 
+  <ion-item>
+    <ion-button color="primary" (click)="limpiarForm()">Limpiar formulario</ion-button>
+  </ion-item>
+
   </form>
 </ion-content>
