--- a/frontend/ARAN/src/app/ordentrabajo/retirar/retirar.page.html
+++ b/frontend/ARAN/src/app/ordentrabajo/retirar/retirar.page.html
@@ -133,6 +133,9 @@
     <ion-button [disabled]="!formRetirarOT.valid" type="submit" color="primary">Retirar Trabajo</ion-button>
   </ion-item>
 
+  <ion-button color="primary" (click)="limpiarForm()">Limpiar formulario</ion-button>
+
+
   </form>
 
 </ion-content>
