add material ui & custom nueva html

--- a/frontend/ARAN/src/app/components/sidenav/sidenav.component.html
+++ b/frontend/ARAN/src/app/components/sidenav/sidenav.component.html
@@ -1,6 +1,7 @@
 <ion-menu 
   menuId = "sideMenu"
-  contentId="main-content">
+  contentId="main-content"
+  class="custom-menu">
   <ion-header>
     <ion-toolbar>
       <ion-title>Menú</ion-title>
