--- a/frontend/ARAN/src/app/ordentrabajo/listar/listar.page.scss
+++ b/frontend/ARAN/src/app/ordentrabajo/listar/listar.page.scss
@@ -1,3 +1,3 @@
-@import '~@swimlane/ngx-datatable/index.css';
+//@import '~@swimlane/ngx-datatable/index.css';
 // @import '~@swimlane/ngx-datatable/themes/bootstrap.scss';
-@import '~@swimlane/ngx-datatable/assets/icons.css';
+//@import '~@swimlane/ngx-datatable/assets/icons.css';
