scss on nueva & retirar

--- a/frontend/ARAN/src/app/ordentrabajo/nueva/nueva.page.html
+++ b/frontend/ARAN/src/app/ordentrabajo/nueva/nueva.page.html
@@ -8,15 +8,15 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="formNuevaOT">
   <form [formGroup]="formNuevaOT" (ngSubmit)="onSubmit(limpiar)">
     <!-- await for target -->
     <ion-item>
-      <ion-label>Tarjeta </ion-label>
+      <ion-label class="custom">Tarjeta </ion-label>
       <ion-input formControlName="tarjeta"  readonly> </ion-input>  
      
       <ion-button id="addNumeroTarjeta" 
-      (click)="addNumeroTarjeta()">Buscar Tarjeta</ion-button>
+      (click)="addNumeroTarjeta()">Leer Tarjeta</ion-button>
       
       <ion-button id="cancelAddNumeroTarjeta" 
       (click)="cancelAddNumeroTarjeta()" 
@@ -31,7 +31,7 @@
 
 
     <ion-item>
-      <ion-label>N° Orden Papel</ion-label>
+      <ion-label class="custom">N° Orden Papel:</ion-label>
       <ion-input formControlName="ordenPapel"></ion-input>  
     </ion-item>
 
@@ -77,7 +77,7 @@
 
     </ion-list>
   </fieldset>
-  
+
   <br><br>
 
     <!-- MOTOS -->
@@ -146,43 +146,45 @@
 
     </fieldset>
 
-    <ion-item>
-    <ion-datetime-button
-    datetime="id_fecha_entrega_estimada" 
-    ></ion-datetime-button>
-    <ion-modal [keepContentsMounted]="true">
-      <ng-template>
-        <ion-datetime id="id_fecha_entrega_estimada" formControlName="fecha_entrega_estimada"></ion-datetime>
-      </ng-template>
-    </ion-modal>
-  </ion-item>
+    <fieldset>
+      <legend>Fecha de entrega estimada</legend>
+      <ion-item>
+        <ion-datetime-button datetime="id_fecha_entrega_estimada">
+        </ion-datetime-button>
+        <ion-icon name="calendar"></ion-icon>
+        
+        <ion-modal [keepContentsMounted]="true">
+          <ng-template>
+            <ion-datetime 
+              id="id_fecha_entrega_estimada" 
+              formControlName="fecha_entrega_estimada"
+              minuteValues="0,30"
+              hourCycle="h24"
+              locale="es-AR"
+              >
+            </ion-datetime>
+          </ng-template>
+        </ion-modal>
+      </ion-item>
+    </fieldset>
 
+  <br>
+
+    <div class="button-center">
   
-
-  <ion-grid>
-    <ion-row justify-content-center>
-      <ion-col>
         <ion-item>
           <ion-button [disabled]="!formNuevaOT.valid" color="primary" (click)="onSubmit(limpiar)">Guardar y Limpiar</ion-button>
         </ion-item>
-      </ion-col>
-    </ion-row>
-    <ion-row justify-content-center>
-      <ion-col>
+      </div>
+      <div class="button-center">
         <ion-item>
           <ion-button [disabled]="!formNuevaOT.valid" color="primary" (click)="onSubmit(nolimpiar)">Guardar y Seguir Añadiendo</ion-button>
         </ion-item>
-      </ion-col>
-    </ion-row>
-    <ion-row justify-content-center>
-      <ion-col>
+      
         <ion-item>
           <ion-button color="primary" (click)="limpiarForm()">Limpiar formulario</ion-button>
         </ion-item>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-  
-
+    </div>
+    <br>
   </form>
 </ion-content>
