--- a/frontend/ARAN/src/app/ordentrabajo/nueva/nueva.page.scss
+++ b/frontend/ARAN/src/app/ordentrabajo/nueva/nueva.page.scss
@@ -1,3 +1,34 @@
-// ion-toolbar{
-//       --background: #c0eaf6; // or any other color code
-//   }
+.formNuevaOT {
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    line-height: 1.4;
+  }
+  
+  .formNuevaOT ion-item ion-label.custom{
+    font-weight: bold;
+    font-size: 22px;
+
+  }
+  
+  .formNuevaOT ion-item ion-input,
+  .formNuevaOT ion-item ion-select {
+    font-size: 18px;
+  }
+  
+  .formNuevaOT ion-item ion-textarea {
+    font-size: 18px;
+    line-height: 1.4;
+  }
+  
+  .formNuevaOT fieldset legend {
+    font-weight: bold;
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+
+  .button-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
