--- a/frontend/ARAN/src/app/ordentrabajo/listar/listar.page.html
+++ b/frontend/ARAN/src/app/ordentrabajo/listar/listar.page.html
@@ -8,19 +8,6 @@
   </ion-toolbar>
 </ion-header>
 
-<!-- <form>
-  <ion-item>
-    <ion-datetime-button
-    datetime="id_fecha_desde" 
-    ></ion-datetime-button>
-    <ion-modal [keepContentsMounted]="true">
-      <ng-template>
-        <ion-datetime id="id_fecha_desde" formControlName="fecha_desde"></ion-datetime>
-      </ng-template>
-    </ion-modal>
-  </ion-item>
-</form> -->
-
 <ion-content>
   <!-- NGX DATATABLE -->
   <!-- <input type="text" (keyup)='filterDatatable($event)'> -->
@@ -35,7 +22,7 @@
     <!-- Theme classes dark, material, bootstrap -->
     <ngx-datatable 
       #table
-      class="bootstrap ngx-datatable"
+      class="ngx-datatable bootstrap"
       [limit]="15"  
       [rows]="rows" 
       [rowHeight]="50" 
@@ -49,34 +36,10 @@
       [loadingIndicator]="loadingIndicator"
       [reorderable]="reorderable"
       [selected]="selected"
+      [rowClass]="getRowClass"
     >
     </ngx-datatable>
   </div>
   <!-- END NGX DATATABLE -->
-
-  <!-- <ion-list>
-    <ion-item>
-      <ion-label>Estado</ion-label>
-      <ion-label>Cliente</ion-label>
-      <ion-label>Trabajo</ion-label>
-      <ion-label>Moto</ion-label>
-      <ion-label>Fecha Entrega</ion-label>
-      <ion-label> </ion-label>
-    </ion-item>
-  </ion-list> -->
-
-  <!-- <ion-list *ngFor="let orden of listadoOT">   
-    <ion-item>
-      <ion-label>{{orden.Estado.nombre}}</ion-label>
-      <ion-label *ngIf="orden.Cliente; else noCliente" >{{orden.Cliente.nombre}} {{orden.Cliente.apellido}}</ion-label>
-      <ng-template #noCliente><ion-label></ion-label></ng-template>
-      <ion-label *ngIf="orden.Trabajo; else noTrabajo">{{orden.Trabajo.nombre}}</ion-label>
-      <ng-template #noTrabajo><ion-label></ion-label></ng-template>
-      <ion-label *ngIf="orden.Moto; else noMoto">{{orden.Moto.nombre}}</ion-label>
-      <ng-template #noMoto><ion-label></ion-label></ng-template>
-      <ion-label>{{orden.fecha_entrega_estimada | date: 'EE dd/MM'}}</ion-label>
-      <ion-button>Detalle</ion-button>
-    </ion-item>
-  </ion-list> -->
 
 </ion-content>
