listar select en console log

--- a/frontend/ARAN/src/app/ordentrabajo/listar/listar.page.html
+++ b/frontend/ARAN/src/app/ordentrabajo/listar/listar.page.html
@@ -37,6 +37,8 @@
       [reorderable]="reorderable"
       [selected]="selected"
       [rowClass]="getRowClass"
+      (activate)="onActivate($event)"
+
     >
     </ngx-datatable>
   </div>
