fix bub find & refresh list

--- a/frontend/ARAN/src/app/ordentrabajo/listar/listar.page.html
+++ b/frontend/ARAN/src/app/ordentrabajo/listar/listar.page.html
@@ -13,6 +13,7 @@
   <!-- <input type="text" (keyup)='filterDatatable($event)'> -->
   <input
         type="text"
+        id="filterByCliente"
         style="padding:8px;margin:15px auto;width:30%;"
         placeholder="Filtrar por Cliente..."
         (keyup)="updateFilter($event)"
